[package]
name = "rdf-diff"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "Frozen trait surface + differential harness for the verification-v1 sweep (ADR-0019 §2, ADR-0020)."

[lib]
path = "src/lib.rs"

[features]
# Shadow implementations are gated so main-parser builds never pull them.
# See ADR-0019 §3 and ADR-0020 §1.
default = []
shadow = []

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }

# Dev-dependencies for the adversary-* integration tests (ADR-0019 §4):
# main parsers are loaded through their `rdf_diff::Parser` implementations
# to drive fixture-level diffs. Kept strictly dev-only — the frozen trait
# surface has no runtime edge onto the parser crates.
[dev-dependencies]
rdf-iri = { path = "../../rdf-iri", version = "0.0.0" }
rdf-ntriples = { path = "../../rdf-ntriples", version = "0.0.0" }
rdf-turtle = { path = "../../rdf-turtle", version = "0.0.0" }
