[package]
name = "rdf-diff"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "Frozen trait surface + differential harness for the verification-v1 sweep (ADR-0019 §2, ADR-0020)."

[lib]
path = "src/lib.rs"

[features]
# Shadow implementations are gated so main-parser builds never pull them.
# See ADR-0019 §3 and ADR-0020 §1.
default = []
shadow = []
# Phase B oracle features: gate tests that diff the main parsers against
# the oxrdfxml / oxjsonld reference adapters. The upstream crates land as
# dev-dependencies only (ADR-0019 §1 carve-out).
oracle-oxrdfxml = []
oracle-oxjsonld = []
# Phase B shadow features: gate tests that three-way diff main vs shadow
# vs oracle. Shadows are stub-only in Phase B; tests are #[ignore]-gated
# until pb-shadow-rdfxml / pb-shadow-jsonld agents fill them in.
shadow-xml = []
shadow-jsonld = []

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }

# Dev-dependencies for the adversary-* integration tests (ADR-0019 §4):
# main parsers are loaded through their `rdf_diff::Parser` implementations
# to drive fixture-level diffs. Kept strictly dev-only — the frozen trait
# surface has no runtime edge onto the parser crates.
[dev-dependencies]
rdf-iri = { path = "../../rdf-iri", version = "0.1.0" }
rdf-ntriples = { path = "../../rdf-ntriples", version = "0.1.0" }
rdf-turtle = { path = "../../rdf-turtle", version = "0.1.0" }
sparql-syntax = { path = "../../sparql-syntax", version = "0.1.0" }
# Shadow parsers are loaded with their own `shadow` feature pre-enabled so the
# adversary integration tests can compare main vs shadow behaviour on every
# `cargo test -p rdf-diff` invocation (ADR-0019 §3, ADR-0020 §6.5).
rdf-iri-shadow = { path = "../../syntax/rdf-iri-shadow", version = "0.1.0", features = ["shadow"] }
rdf-ntriples-shadow = { path = "../../syntax/rdf-ntriples-shadow", version = "0.1.0", features = ["shadow"] }
rdf-turtle-shadow = { path = "../../syntax/rdf-turtle-shadow", version = "0.1.0", features = ["shadow"] }
sparql-syntax-shadow = { path = "../../syntax/sparql-syntax-shadow", version = "0.1.0", features = ["shadow"] }
# Phase B main parsers (all now compile and implemented).
rdf-jsonld = { path = "../../rdf-jsonld", version = "0.1.0" }
rdf-xml = { path = "../../rdf-xml", version = "0.1.0" }
# Phase B shadow parsers (all now compile and implemented).
rdf-jsonld-shadow = { path = "../../syntax/rdf-jsonld-shadow", version = "0.1.0", features = ["shadow"] }
rdf-xml-shadow = { path = "../../syntax/rdf-xml-shadow", version = "0.1.0", features = ["shadow"] }
# Oracle adapters for Phase B: oxrdfxml and oxjsonld are always present as
# dev-dependencies (they are test-only by definition) but their usage in
# test bodies is gated behind the oracle-oxrdfxml / oracle-oxjsonld features
# (ADR-0019 §1 carve-out). The feature flags control which test bodies
# compile; the crates themselves are always in the dev graph.
oxrdf = "0.3"
oxrdfxml = "0.2"
oxjsonld = "0.2"
